[metadata]
# replace with your username:
name = lmtrex-zzeppozz
version = 0.1.0
author = Lifemapper Team
author_email = aimeestewart@ku.edu
description = Lifemapper Broker and Resolver service tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lifemapper/t-rex
project_urls =
    Bug Tracker = https://github.com/lifemapper/t-rex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src